# neuronote

./: .gitignore  CMakeLists.txt  README.md  install-libs.sh  setup.py  tasks.md
backend/: create_link.py  create_page.py
codes/: create-neu.py  create_links.py  create_node.py  create_page.py  ids.csv
codes/backend/: create_book.py  create_check_id.py  create_link.py  create_page.py  links.csv
codes/frontend/: graph_view.py  start_view.py
frontend/: node_view.py
storage/bag/book1/: page1.json  page2.json
storage/bag/book2/: page22.json
